# flux_foundry

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  tsan.yml
base/: inplace_base.h  traits.h  type_erase_base.h  type_utility.h
bench/: README.md
bench/horizontal_compare/: README.md  compare_flux_asio.cpp  compare_flux_asio_noexcept.cpp  run.sh  run_noexcept.sh
executor/: gsource_executor.h  simple_executor.h
extension/: cuda_awaitable.h  external_async_awaitable.h
flow/: flow.h  flow_aggregator.h  flow_async_aggregator.h  flow_awaitable.h  flow_blueprint.h  flow_def.h  flow_fork_receiver_tmp.h  flow_node.h  flow_receiver.h  flow_runner.h
memory/: aligned_alloc.h  either_t.h  flat_storage.h  hazard_ptr.cpp  hazard_ptr.h  inplace_t.h  lite_ptr.h  padded_t.h  pooling.h  result_t.h  static_mem_pool.h
task/: future_task.h  task_core.h  task_wrapper.h
test/: CMakeLists.txt  atomic_enum_probe.cpp  cuda_fast_awaitable_probe.cpp  cuda_image_backend.cu  cuda_image_backend.h  cuda_image_demo.cpp  cuda_runtime_backend.cu  cuda_runtime_backend.h  cuda_runtime_demo.cpp  cuda_runtime_smoke.cu  external_async_awaitable_probe.cpp  flow_controller_memorder_stress.cpp  flow_fork_join_semantics_test.cpp  flow_fullchain_smoke.cpp  flow_fullchain_smoke_noexcept.cpp  flow_perf.cpp  flow_perf_noexcept.cpp  flow_smoke_test.cpp  flow_state_multiflow_cancel_simple_executor_stress.cpp  flow_state_multiflow_cancel_stress.cpp  flow_state_stress.cpp  inline_executor_probe.cpp  io_uring_awaitable_probe.cpp  mpsc_probe.cpp  noexcept_probe.cpp  noexcept_smoke.cpp  pool_probe.cpp  pooling_allocator_stress.cpp  simple_dispatch_before_run_then_shutdown.cpp  simple_dispatch_hang_probe.cpp  simple_fullqueue_shutdown_spin.cpp  simple_fullqueue_with_run.cpp  simple_fullqueue_with_run_started.cpp  simple_postshutdown_spin_probe.cpp  simple_run_shutdown_join.cpp  simple_shutdown_before_run.cpp  simple_shutdown_inline_probe.cpp  simple_shutdown_probe.cpp  test_queues.cpp  test_static_stack.cpp
test/model/: AsyncAggregator2Way.tla  AsyncAggregator2WayWhenAll.cfg  AsyncAggregator2WayWhenAllFast.cfg  AsyncAggregator2WayWhenAny.cfg  AsyncAggregator2WayWhenAnyFast.cfg  AwaitableLifecycle.tla  AwaitableLifecycleFast.cfg  AwaitableLifecycleNormal.cfg  FlowControllerCancel.cfg  FlowControllerCancel.tla  FlowRunnerAsyncNode.tla  FlowRunnerAsyncNodeFast.cfg  FlowRunnerAsyncNodeNormal.cfg  MpmcQueueSeq.cfg  MpmcQueueSeq.tla  README.md  ReadyBitRingQueue.tla  ReadyBitRingQueueMPSC.cfg  ReadyBitRingQueueSPSC.cfg  SimpleExecutorTickets.cfg  SimpleExecutorTickets.tla  SpmcDequeState.cfg  SpmcDequeState.tla  StaticListDualStack.cfg  StaticListDualStack.tla
utility/: back_off.h  callable_wrapper.h  compressed_pair.h  concurrent_queues.h  static_list.h  static_stack.h  yield.h
